--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,11 +4,16 @@
     package="com.gardenvillagers.chitchat">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:windowSoftInputMode="adjustPan"
+        android:icon="@drawable/user_icon"
         android:label="@string/app_name"
         android:roundIcon="@drawable/inf"
         android:supportsRtl="true"
@@ -24,6 +29,9 @@
         <activity android:name=".Login" />
         <activity android:name=".CreateAccount" />
         <activity android:name=".DisplayUser" />
+        <activity android:name=".DisplayCost"
+            android:windowSoftInputMode="adjustPan"
+            />
         <activity android:name=".Register" />
         <activity android:name=".Users" />
         <activity android:name=".Chat" />
